プラグインをJava 8で動くようにする（別プロセス解析のS3、#49）
Eclipse の中で動くのは画面だけになったので、プラグインを Java 8 でコンパイルし、
古い Eclipse（4.6・2016年）でも入るようにした。

ビルド:
- コンパイルを2本立てにした。解析本体（CallHierarchyExporter + jche/**）は release 17、
  プラグイン（jche/eclipse/**）は release 8。同じモジュール内で
  maven-compiler-plugin の実行を分けている
- 出来上がった jar は、プラグインのクラスがメジャー版 52、lib/jche-core.jar の中身が 61
- PDE の build.properties も src-ui/ だけに変更（.project のリンクフォルダも削除）。
  PDE で動かす前に mvn package で lib/ を作る必要がある旨をコメントに書いた

MANIFEST:
- Bundle-RequiredExecutionEnvironment を JavaSE-1.8 に
- Require-Bundle の下限を Eclipse 4.6 相当へ（jdt.core 3.10.0、ui.workbench 3.108.2 ほか）

ソース（15箇所）:
- instanceof のパターン 8、switch のアロー構文 2 を従来の書き方に戻す
- String#isBlank 2、String#repeat 1、InputStream#readAllBytes 1 を Java 8 の書き方に
- PlatformUI.getDialogSettingsProvider（Eclipse 4.24〜）を
  AbstractUIPlugin#getDialogSettings() に戻す。古い Eclipse に無いため
- MethodKeys から解析本体への最後の参照（jche.cache.MethodRef）を外した

検査:
- test/plugin-api/run.sh を追加。Eclipse 4.6 相当の古い jar 16 個と --release 8 で
  プラグインをコンパイルし、クラスファイルの版まで確認する。本番のビルドは新しい jar を
  使うのでこの検査だけが「古い Eclipse でも動く」を守る（実際この検査で
  getDialogSettingsProvider の混入が見つかった）
- test/plugin/run.sh の隔離検査を、import だけでなく完全修飾名の参照まで見るよう強化。
  build.properties と BREE の検査も追加
- CI の eclipse-plugin ジョブを「定義の検査 → 古い Eclipse での検査 → バンドル作成 →
  クライアント検査」に整理
- 回帰テスト（whole・entry）の CSV は期待値と一致。全5種のテストが PASS

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RDo2SmHCsGAaqsNRPhYkyX